--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "@thiagoelg/node-printer": "^0.6.2",
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "jspdf": "^2.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "pdf-to-printer": "^5.6.0"
   }
 }
