--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "tsc && node bin/www"
   },
   "dependencies": {
     "@thiagoelg/node-printer": "^0.6.2",
+    "@types/express": "^4.16.1",
+    "@types/node": "^14.18.53",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,6 +17,7 @@
     "jspdf": "^2.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "pdf-to-printer": "^5.6.0"
+    "pdf-to-printer": "^5.6.0",
+    "typescript": "^5.1.6"
   }
 }
