--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "@thiagoelg/node-printer": "^0.6.2",
     "@types/express": "^4.16.1",
-    "@types/node": "^14.18.53",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -19,5 +18,8 @@
     "multer": "^1.4.5-lts.1",
     "pdf-to-printer": "^5.6.0",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.4"
   }
 }
